fixing spacing, spelling, and link

--- a/themes/computer-lab/source/css/pages/_residency.scss
+++ b/themes/computer-lab/source/css/pages/_residency.scss
@@ -1,4 +1,4 @@
-#residency{
+#residency {
 
   min-height: 100vh;
   display: flex;
@@ -9,32 +9,34 @@
   height: 100%;
 
   @media (max-width: $tablet) {
-    padding: $base-spacing * 4 0 $base-spacing * 6 0;
+    padding: $base-spacing * 40 $base-spacing * 60;
 }
 
-
-h1.section-title{
+h1.section-title {
     @media (max-width: $tablet) {
       padding-left: 0px;
-      padding-top:0px;}
+      padding-top: 0px;
 
+  }
       color: $brand;
       padding-left: 150px;
+      padding-top: 50px;
+      padding-bottom: 0px;
       text-align: left;
       font-weight:700;
-
   }
-  p.page-description{
+
+  p.page-description {
     @media (max-width: $tablet) {
       padding-left: 0px;
   }
 
-  padding-top:30px;
-  padding-bottom:30px;
-  padding-left:150px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 150px;
   text-align: left;
 }
-p.attributes{
+p.attributes {
     @media (max-width: $tablet) {
       padding-left: 0px;
   }
@@ -49,30 +51,30 @@ ul{
       padding-left: 25px;
   }
 
-  padding-left:195px;
+  padding-left: 195px;
   padding-bottom: 0px;
 }
-li
-{
-   text-align: left;
-   font-size: 21px;
+li {
+ text-align: left;
+ font-size: 21px;
 }
-p.closing{
+p.closing {
     @media (max-width: $tablet) {
       padding-left: 0px;
   }
 
   padding-left: 150px;
-  padding-top: 30px;
+  padding-bottom: 13px;
+  padding-top: 35px;
   text-align: left;
-  text-size:21px;
+  text-size: 21px;
 }
 .gallery{
 
-    display:flex;
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top:20px;
+    margin-top: 20px;
     padding-left: 150px;
 
     @media (max-width: $tablet) {
